formateo de fecha en registro

--- a/src/app/auth/pages/registro/registro.page.html
+++ b/src/app/auth/pages/registro/registro.page.html
@@ -348,9 +348,19 @@
             />
           </div>
           
-          <div class="flex space-x-4">
-            <label for="fec_nac">Fecha de Nacimiento</label>
-            <input type="date" id="fec_nac" formControlName="fec_nac" class="border rounded px-2 py-1">
+          <div >
+            <label 
+              for="fec_nac"
+              class="block text-sm font-medium leading-6 text-principal-blue-400">
+              Fecha de Nacimiento</label
+              >
+            <input 
+              formControlName="fec_nac" 
+              id="fec_nac"
+              name="fec_nac" 
+              type="date" 
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700">
           </div>
 
           <div>
