--- a/src/app/auth/pages/editar-persona/editar-persona.page.html
+++ b/src/app/auth/pages/editar-persona/editar-persona.page.html
@@ -111,6 +111,14 @@
             Actualizar
           </button>
         </div>
+        <br>
+        <div class="container-fb flex items-center justify-items-center">
+          <button
+            (click)="volver()"
+            class="flex w-72 justify-center rounded-3xl bg-principal-blue-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-principal-blue-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-principal-blue-600">
+            Volver
+          </button>
+        </div>
       </form>
     </div>
   </div>
@@ -225,7 +233,8 @@
 
         <div class="mt-8">
           <!--TODO:Agregar redireccion al dashboard -->
-          <button type="submit"
+          <button
+            (click)="volver()"
             class="w-full py-3 bg-black text-white rounded-full shadow-md hover:bg-pricipal-grey-400 transition duration-300">
             Volver
           </button>
