--- a/src/app/dashboard/pages/contacto/contacto.page.html
+++ b/src/app/dashboard/pages/contacto/contacto.page.html
@@ -1,57 +1,67 @@
-<ion-content *ngIf="isMobilView; else desktopView" [fullscreen]="true">
-  <h1>Aqui va la version mobil del form contacto indecente jijiji</h1>
-</ion-content>
 
-<ng-template #desktopView>
 <ion-content>
-<div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
-  <div class="max-w-md w-full space-y-8">
-    <div>
-      <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-principal-grey-700">
-        Contactanos
-      </h2>
-      <p class="mt-2 text-center text-sm leading-5 text-principal-grey-700">
-        Nos encantaria escucharte!
-      </p>
-    </div>
-    <form class="mt-8 space-y-6" action="#" method="POST">
-      <input type="hidden" name="remember" value="true">
-      <div class="rounded-md shadow-sm -space-y-px">
-        <div>
-          <label for="name" class="sr-only">Nombre Completo</label>
-          <input id="name" name="name" type="text" autocomplete="name" required
-                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                placeholder="Nombre Completo">
-        </div>
-        <div>
-          <label for="email" class="sr-only">Correo electronico</label>
-          <input id="email" name="email" type="email" autocomplete="email" required
-                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                placeholder="Correo electronico">
-        </div>
-        <div>
-          <label for="subject" class="sr-only">Asunto</label>
-          <input id="subject" name="subject" type="text" required
-                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                placeholder="Asunto">
-        </div>
-        <div>
-          <label for="message" class="sr-only">Mensaje</label>
-          <textarea id="message" name="message" rows="4" required
-                    class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                    placeholder="Mensaje"></textarea>
-        </div>
-      </div>
-
+  <div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
+    <div class="max-w-md w-full space-y-8">
       <div>
-        <button type="submit"
-                class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-pricipal-grey-400 hover:bg-principal-blue-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:">
-          Enviar
-        </button>
+        <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-principal-grey-700">
+          Contáctanos
+        </h2>
+        <p class="mt-2 text-center text-sm leading-5 text-principal-grey-700">
+          ¡Nos encantaría escucharte!
+        </p>
       </div>
-    </form>
+      <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="mt-8 space-y-6">
+        <input type="hidden" name="remember" value="true">
+        <div class="rounded-md shadow-sm -space-y-px">
+          <div>
+            <label for="name" class="sr-only">Nombre Completo</label>
+            <input id="name" formControlName="name" type="text" autocomplete="name" required
+                  class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                  placeholder="Nombre Completo">
+            <div *ngIf="contactForm.get('name')?.invalid && contactForm.get('name')?.touched">
+              <small *ngIf="contactForm.get('name')?.errors?.['required']">El nombre es requerido.</small>
+              <small *ngIf="contactForm.get('name')?.errors?.['minlength']">El nombre debe tener al menos 2 caracteres.</small>
+            </div>
+          </div>
+          <div>
+            <label for="email" class="sr-only">Correo electrónico</label>
+            <input id="email" formControlName="email" type="email" autocomplete="email" required
+                  class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                  placeholder="Correo electrónico">
+            <div *ngIf="contactForm.get('email')?.invalid && contactForm.get('email')?.touched">
+              <small *ngIf="contactForm.get('email')?.errors?.['required']">El correo electrónico es requerido.</small>
+              <small *ngIf="contactForm.get('email')?.errors?.['email']">Debe ser un correo electrónico válido.</small>
+            </div>
+          </div>
+          <div>
+            <label for="subject" class="sr-only">Asunto</label>
+            <input id="subject" formControlName="subject" type="text" required
+                  class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                  placeholder="Asunto">
+            <div *ngIf="contactForm.get('subject')?.invalid && contactForm.get('subject')?.touched">
+              <small *ngIf="contactForm.get('subject')?.errors?.['required']">El asunto es requerido.</small>
+            </div>
+          </div>
+          <div>
+            <label for="message" class="sr-only">Mensaje</label>
+            <textarea id="message" formControlName="message" rows="4" required
+                      class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                      placeholder="Mensaje"></textarea>
+            <div *ngIf="contactForm.get('message')?.invalid && contactForm.get('message')?.touched">
+              <small *ngIf="contactForm.get('message')?.errors?.['required']">El mensaje es requerido.</small>
+              <small *ngIf="contactForm.get('message')?.errors?.['minlength']">El mensaje debe tener al menos 10 caracteres.</small>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <button type="submit"
+          class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-pricipal-grey-400 hover:bg-principal-blue-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:">
+    Enviar
+  </button>
+        </div>
+      </form>
+    </div>
   </div>
-</div>
 </ion-content>
 
-</ng-template>
