--- a/src/app/dashboard/pages/sobre-nosotros/sobre-nosotros.page.html
+++ b/src/app/dashboard/pages/sobre-nosotros/sobre-nosotros.page.html
@@ -1,42 +1,43 @@
-<ion-content *ngIf="isMobilView; else desktopView" [fullscreen]="true">
-  <h1>Aqui va la version mobil de Sobre nosotros </h1>
-</ion-content>
-
-<ng-template #desktopView>
 <ion-content>
-<!-- Carousel -->
-<div class="flex" id="carouselExample" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators mt-24">
-    <h1 class="text-4xl">Sobre work</h1>
-    <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExample" data-slide-to="1"></li>
-    <li data-target="#carouselExample" data-slide-to="2"></li>
-  </ol>
+  <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+    <div class="row-start-10 w-screen text-center">
+      <h1 class="text-4xl text-principal-grey-700 font-bold">Equipo AppDopta</h1>
+    </div>
+    <div class="row-start-13 row-span-2" *ngFor="let mascota of appDoptaTeam">
+      <div
+        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 overflow-hidden">
+        <a href="#">
+          <div class="aspect-w-1 aspect-h-1 ">
+            <img class="object-contain w-full h-100 rounded-t-lg"
+              [src]="mascota.foto ? mascota.foto : 'assets/icon/Logo_AppDopta.jpeg'"
+              alt="Imagen de {{ mascota.nombre }}" />
+          </div>
+        </a>
+        <div class="flex-grow p-5">
+          <p class="mb-2 font-bold text-gray-700 dark:text-gray-400">
+            {{mascota.cargo}}
+          </p>
+          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ mascota.nombre|
+            uppercase }}</h5>
+          <p class="mb-2 font-medium text-gray-700 dark:text-gray-400">
+            Nombre: {{ mascota.nombre }}
+          </p>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 1">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 2">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 3">
+          <p class="mb-2 font-medium text-gray-700 dark:text-gray-400">
+            Usuario: {{ mascota.usuario }}
+            <br>
+            Descripción:    {{ mascota.descripcion }}
+          </p>
+
+
+          <button
+          type="submit"
+          class="w-full py-3 bg-pricipal-grey-400 text-white rounded-full shadow-md hover:bg-pricipal-grey-400 transition duration-300"
+        >
+          Detalles
+        </button>
+        </div>
+      </div>
     </div>
   </div>
-
-  <!-- Controls -->
-  <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
 </ion-content>
-</ng-template>
