Quitando segundo scroll general

--- a/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
+++ b/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
@@ -1,5 +1,18 @@
-<ion-content>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-4" [ngClass]="{' md:mt-32  lg:mt-32': true}">
+<section [ngClass]="{'md:mb-32  lg:mb-32': true}"></section>
+<div *ngIf="isLoggedIn()" class="grid grid-cols-1 gap-4 p-2">
+  <div class="flex-grow flex flex-col items-start
+">
+
+    <button (click)="navigateTo('dashboard/crear-mascota')" class="bg-principal-blue-400 hover:bg-principal-blue-600 text-white py-2 px-4 rounded-full ml-4 w-48">
+      Publicar Mascota
+    </button>
+
+  </div>
+</div>
+
+
+<ion-content >
+  <div class="mb-32 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-4">
     <div *ngFor="let mascota of mascotas">
       <ion-card class="flex flex-col">
         <div class="relative w-full" style="padding-top: 100%;">
@@ -14,8 +27,7 @@
         </ion-card-header>
 
         <ion-card-content class="flex-grow flex flex-col items-center">
-          <button
-            class="bg-principal-blue-400 hover:bg-principal-blue-600 text-white py-2 px-4 rounded-full mt-4 w-48">
+          <button class="bg-principal-blue-400 hover:bg-principal-blue-600 text-white py-2 px-4 rounded-full mt-4 w-48">
             Ver Detalle
           </button>
         </ion-card-content>
