--- a/src/app/dashboard/pages/index/index.page.html
+++ b/src/app/dashboard/pages/index/index.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<ion-content scrollY="false" [fullscreen]="true">
 <app-toolbar></app-toolbar>
 
 <router-outlet></router-outlet>
