Arreglando las redirecciones

--- a/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
+++ b/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
@@ -1,9 +1,8 @@
-<section [ngClass]="{'md:mb-32  lg:mb-32': true}"></section>
-<div *ngIf="isLoggedIn()" class="grid grid-cols-1 gap-4 p-2">
-  <div class="flex-grow flex flex-col items-start
-">
+<section [ngClass]="{' md:mb-32  lg:mb-32': true}"></section>
+<div *ngIf="isLoggedIn()" class="grid grid-cols-1">
+  <div class=" items-center w-screen">
 
-    <button (click)="navigateTo('dashboard/crear-mascota')" class="bg-principal-blue-400 hover:bg-principal-blue-600 text-white py-2 px-4 rounded-full ml-4 w-48">
+    <button (click)="navigateTo('dashboard/crear-mascota')" class="bg-principal-blue-400 hover:bg-principal-blue-600 text-white py-2 px-4 rounded-full w-full mt-2 mb-2">
       Publicar Mascota
     </button>
 
@@ -12,7 +11,7 @@
 
 
 <ion-content >
-  <div class="mb-32 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-4">
+  <div class="mb-48 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-4">
     <div *ngFor="let mascota of mascotas">
       <ion-card class="flex flex-col">
         <div class="relative w-full" style="padding-top: 100%;">
