--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -150,12 +150,22 @@
               </div>
               <ul class="py-4" role="none">
                 <li class="rounded-lg py-2 my-2 grid grid-rows-2 gap-4">
+                  <div *ngIf="currentUser?.nombre; else isOrganization ">
                   <span class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
                     (click)="toggleProfile()">
                     <i class="fa-solid fa-gear"></i>
                     configuraciones
                   </span>
+                  </div>
 
+                  <ng-template #isOrganization>
+                  <span class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
+                    (click)="toggleProfileOrganization()">
+                    <i class="fa-solid fa-gear"></i>
+                    configuraciones organización
+                  </span>
+                  </ng-template>
+                  
                   <span class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
                     (click)="onLogout()">
                     <i class="fa-solid fa-right-from-bracket"></i>
