--- a/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
+++ b/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
@@ -1,16 +1,13 @@
-<section [ngClass]="{' md:mb-32  lg:mb-32': true}"></section>
+<section [ngClass]="{'md:mb-32 lg:mb-32': true}"></section>
 <div *ngIf="isLoggedIn()" class="grid grid-cols-1">
-  <div class=" items-center w-screen">
-
+  <div class="items-center w-screen">
     <button (click)="navigateTo('dashboard/crear-mascota')" class="bg-principal-blue-400 hover:bg-principal-blue-600 text-white py-2 px-4 rounded-full w-full mt-2 mb-2">
       Publicar Mascota
     </button>
-
   </div>
 </div>
 
-
-<ion-content >
+<ion-content>
   <div class="mb-48 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-4">
     <div *ngFor="let mascota of mascotas">
       <ion-card class="flex flex-col">
@@ -19,12 +16,18 @@
             [src]="mascota.foto ? mascota.foto : '../../../assets/icon/Logo_AppDopta.jpeg'" />
         </div>
         <ion-card-header>
-          <ion-card-subtitle>{{ mascota.especie }} - {{ mascota.edad }}</ion-card-subtitle>
-          <ion-card-title>{{ mascota.titulo | uppercase }}</ion-card-title>
+          <div class="flex justify-between items-center">
+            <div>
+              <ion-card-subtitle>{{ mascota.especie }} - {{ mascota.edad }}</ion-card-subtitle>
+              <ion-card-title>{{ mascota.titulo | uppercase }}</ion-card-title>
+            </div>
+            <button *ngIf="isLoggedIn()" (click)="toggleFavorito(mascota)" [class.text-red-500]="mascota.is_favorito" class="ml-4">
+              <ion-icon [name]="mascota.is_favorito ? 'heart' : 'heart-outline'" class="text-2xl"></ion-icon>
+            </button>
+          </div>
           <ion-card-subtitle>Nombre: {{ mascota.nom_mascota }}</ion-card-subtitle>
           <ion-card-subtitle>Fecha de publicación: {{ mascota.fec_public | slice: 0:10 }} </ion-card-subtitle>
         </ion-card-header>
-
         <ion-card-content class="flex-grow flex flex-col items-center">
           <button class="bg-principal-blue-400 hover:bg-principal-blue-600 text-white py-2 px-4 rounded-full mt-4 w-48">
             Ver Detalle
