--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -12,11 +12,11 @@
     <ion-content class="ion-padding">
       <ion-list>
 
-        <ion-menu-toggle>
+        <!-- <ion-menu-toggle>
           <ion-item (click)="navigateTo('dashboard/crear-mascota')">
             <ion-label>Publicar mascota</ion-label>
           </ion-item>
-        </ion-menu-toggle>
+        </ion-menu-toggle> -->
 
         <ion-menu-toggle>
           <ion-item (click)="navigateTo('dashboard/adoptar')">
@@ -24,11 +24,11 @@
           </ion-item>
         </ion-menu-toggle>
 
-        <ion-menu-toggle>
+        <!-- <ion-menu-toggle>
           <ion-item (click)="navigateTo('dashboard/crear-evento')">
             <ion-label>Publicar Evento</ion-label>
           </ion-item>
-        </ion-menu-toggle>
+        </ion-menu-toggle> -->
 
         <ion-menu-toggle>
           <ion-item (click)="navigateTo('dashboard/eventos')">
@@ -42,11 +42,11 @@
           </ion-item>
         </ion-menu-toggle>
 
-        <ion-menu-toggle>
+        <!-- <ion-menu-toggle>
           <ion-item (click)="navigateTo('dashboard/crear-servicio')">
             <ion-label>Publicar Servicio</ion-label>
           </ion-item>
-        </ion-menu-toggle>
+        </ion-menu-toggle> -->
 
         <ion-menu-toggle>
           <ion-item (click)="navigateTo('dashboard/mapa-servicios')">
@@ -105,12 +105,12 @@
 
           <div
             class="ml-8 flex items-center justify-between text-principal-grey-400 font-semibold sm:flex-wrap md:flex-nowrap xl:flex-nowrap">
-            <a href="dashboard/crear-mascota" class="px-4 hover:text-principal-grey-700">Publicar mascota</a>
+            <!-- <a href="dashboard/crear-mascota" class="px-4 hover:text-principal-grey-700">Publicar mascota</a> -->
             <a href="dashboard/adoptar" class="px-4 hover:text-principal-grey-700">Adoptar</a>
-            <a href="dashboard/crear-evento" class="px-4 hover:text-principal-grey-700">Publicar eventos</a>
+            <!-- <a href="dashboard/crear-evento" class="px-4 hover:text-principal-grey-700">Publicar eventos</a> -->
             <a href="dashboard/eventos" class="px-4 hover:text-principal-grey-700">Eventos</a>
             <a href="dashboard/favoritos" class="px-4 hover:text-principal-grey-700">Favoritos</a>
-            <a href="dashboard/crear-servicio" class="px-4 hover:text-principal-grey-700">Publicar servicio</a>
+            <!-- <a href="dashboard/crear-servicio" class="px-4 hover:text-principal-grey-700">Publicar servicio</a> -->
             <a href="dashboard/mapa-servicios" class="px-4 hover:text-principal-grey-700">Servicios</a>
             <a href="dashboard/sobre-nosotros" class="px-4 hover:text-principal-grey-700">Sobre nosotros</a>
             <a href="dashboard/contacto" class="px-4 hover:text-principal-grey-700">Contacto</a>
@@ -165,7 +165,7 @@
                     configuraciones organización
                   </span>
                   </ng-template>
-                  
+
                   <span class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
                     (click)="onLogout()">
                     <i class="fa-solid fa-right-from-bracket"></i>
