--- a/src/app/dashboard/pages/favoritos/favoritos.page.html
+++ b/src/app/dashboard/pages/favoritos/favoritos.page.html
@@ -1,42 +1,1 @@
-<ion-content *ngIf="isMobilView; else desktopView" [fullscreen]="true">
-  <h1>Aqui va la version mobil de favoritos </h1>
-</ion-content>
-
-<ng-template #desktopView>
-<ion-content>
-<!-- Carousel -->
-<div class="flex" id="carouselExample" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators mt-24">
-    <h1 class="text-4xl">Favoritos work</h1>
-    <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExample" data-slide-to="1"></li>
-    <li data-target="#carouselExample" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 1">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 2">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 3">
-    </div>
-  </div>
-
-  <!-- Controls -->
-  <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-</ion-content>
-</ng-template>
+<app-mascota-fav></app-mascota-fav>
