se agregan imagenes por default

--- a/src/app/auth/pages/editar-organizacion/editar-organizacion.page.html
+++ b/src/app/auth/pages/editar-organizacion/editar-organizacion.page.html
@@ -89,13 +89,13 @@
           </div>
         </div>
 
-        <div>
+        <!-- <div>
           <label for="imagen_perfil" class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400">Imagen de perfil</label>
           <div class="mt-1">
             <input id="imagen_perfil" name="imagen_perfil" (change)="onImgSelected($event)" type="file"
               class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
           </div>
-        </div>
+        </div> -->
 
         <div class="container-fb flex items-center justify-items-center">
           <button type="submit"
@@ -205,14 +205,14 @@
                 class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700" />
             </div>
 
-            <div>
+            <!-- <div>
               <label for="imagen_perfil" class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400">Imagen
                 de perfil</label>
               <div class="mt-1">
                 <input type="file" id="imagen_perfil" (change)="onImgSelected($event)"
                   class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
               </div>
-            </div>
+            </div> -->
 
             <div class="mt-8">
               <button type="submit"
