--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -127,7 +127,7 @@
                 <span class="sr-only">Open user menu</span>
                 <div class="flex items-center justify-center rounded-full bg-principal-grey-400"
                   style="width: 50px; height: 50px;">
-                  <img class="rounded-full" [src]="currentUser.imagen_perfil" [alt]="currentUser.nombre"
+                  <img class="rounded-full" [src]="currentUser.imagen_perfil || defaultImageURL" [alt]="currentUser.nombre"
                     style="width: 40px; height: 40px;"> <!--TODO:AJUSTAR PARA QUE SE VEA FOTO DE PERFIL-->
                 </div>
               </button>
