--- a/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
+++ b/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
@@ -19,24 +19,26 @@
     <h2 class="text-lg font-semibold mb-2">Filtros</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
       <div class="border border-gray-500 rounded-lg p-2">
-
         <select id="especie" name="especie" [(ngModel)]="filtros.especie"
           class="input-field block w-full py-2 px-3 rounded-md placeholder-gray-500 focus:outline-none">
           <option value="" disabled selected class="text-gray-500 italic">Especie</option>
-          <option *ngFor="let opcion of opcionesEspecie" [value]="opcion">{{ opcion }}</option>
+          <option *ngFor="let especie of especies" [value]="especie">{{ especie }}</option>
         </select>
       </div>
-      <div class="border border-gray-300 rounded-lg p-2">
-        <input type="text" id="raza" name="raza" [(ngModel)]="filtros.raza"
-          class="input-field block w-full py-2 px-3 rounded-md placeholder-gray-500 focus:outline-none"
-          placeholder="Raza" />
+      <div class="border border-gray-500 rounded-lg p-2">
+        <select id="raza" name="raza" [(ngModel)]="filtros.raza"
+          class="input-field block w-full py-2 px-3 rounded-md placeholder-gray-500 focus:outline-none">
+          <option value="" disabled selected class="text-gray-500 italic">Raza</option>
+          <option *ngFor="let raza of razas" [value]="raza">{{ raza }}</option>
+        </select>
       </div>
-      <div class="border border-gray-300 rounded-lg p-2">
-        <input type="text" id="sexo" name="sexo" [(ngModel)]="filtros.sexo"
-          class="input-field block w-full py-2 px-3 rounded-md placeholder-gray-500 focus:outline-none"
-          placeholder="Sexo" />
+      <div class="border border-gray-500 rounded-lg p-2">
+        <select id="sexo" name="sexo" [(ngModel)]="filtros.sexo"
+          class="input-field block w-full py-2 px-3 rounded-md placeholder-gray-500 focus:outline-none">
+          <option value="" disabled selected class="text-gray-500 italic">Sexo</option>
+          <option *ngFor="let sexo of sexos" [value]="sexo">{{ sexo }}</option>
+        </select>
       </div>
-
       <div class="flex items-center">
         <button class="bg-principal-blue-400 hover:bg-principal-blue-600 text-white py-2 px-4 rounded-full mt-2 mr-2"
           (click)="aplicarFiltros()">Aplicar Filtros</button>
